spacing problem fixed

--- a/src/App.css
+++ b/src/App.css
@@ -399,6 +399,7 @@ select {
   font-size: 18px;
   height: 55px;
   padding-left: 2rem;
+  padding-right: 1.5rem;
   background: #f6f6f8;
   width: 500px;
   border: 0;
@@ -430,6 +431,7 @@ input[type="date"] {
   width: 90%;
   height: 55px;
   padding-left: 2rem;
+  padding-right: 1.5rem;
   background: #f6f6f8;
   width: 500px;
   border: 0;
@@ -448,6 +450,8 @@ input[type="email"] {
   width: 95%;
   height: 55px;
   padding-left: 2rem;
+  padding-right: 1.5rem;
+
 }
 input[type="password"] {
   text-align: left;
@@ -460,6 +464,8 @@ input[type="password"] {
   width: 95%;
   height: 55px;
   padding-left: 2rem;
+  padding-right: 1.5rem;
+
 }
 
 input[type="email"]:invalid {
